# ds-ecommerce-search-engine

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: HBS_retrieval_assignment.ipynb
results/: README.md
results/experiment_20251015_082442/metrics/: metrics.csv
results/experiment_20251015_083403/metrics/: metrics.json
results/experiment_20251015_101149/: comprehensive_results.json  experiment_report.md  method_comparison.csv
results/experiment_20251015_101149/bm25/configs/: config.json
results/experiment_20251015_101149/hybrid/metrics/: metrics.csv  metrics.json
results/experiment_20251015_101149/semantic/metrics/: metrics.csv  metrics.json
results/experiment_20251015_101149/tfidf/metrics/: metrics.csv  metrics.json
scripts/: setup_ollama.sh
src/: __init__.py  config.py  data_loader.py  data_preparation.py  pipeline.py  results_manager.py  utils.py
src/evaluation/: __init__.py  metrics.py
src/models/: __init__.py  base.py  bert.py  bm25.py  colbert.py  crossencoder.py  dpr.py  hybrid.py  ollama.py  semantic.py  tfidf.py
