[project]
name = "ecommerce-search-engine"
version = "0.2.0"
description = "Advanced E-commerce Search Engine with Multiple Retrieval Strategies"
authors = [{ name = "Laren Osorio", email = "losoriot@uni.pe" }]
requires-python = ">=3.9"
readme = "README.md"


dependencies = [
    "torch",
    "pandas",
    "numpy",
    "scikit-learn",
    "sentence-transformers",
    "rank-bm25",
    "tqdm",
    "pydantic",
    "loguru",
    "jupyter",
    "ipykernel",
    "matplotlib",
    "seaborn",
    "transformers>=4.57.1",
    "faiss-cpu>=1.12.0",
    "ollama>=0.6.0",
]

[tool.uv]
managed = true
